5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1717_2525.log
== TEST (2019-05-15 20:13:50) 
-- CODE:
num=int(input("numero: "))
a=0
while(a < num)
	print(x,"divisores")

-- ERROR:
File "XXXX", line 3
    while(a < num)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:14:02) 
-- CODE:
num=int(input("numero: "))
a=0
while(a < num):
	print(x,"divisores")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(x,"divisores")
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:14:32) 
-- CODE:
num=int(input("numero: "))
a=0
while(a < num):
	a=a+1
	print(x,"divisores")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x,"divisores")
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:15:04) 
-- CODE:
num=int(input("numero: "))
a=0
while(a < num):
	a=a+1
	print(a,"divisores")
	

-- OUTPUT:
1 divisores
2 divisores
3 divisores
4 divisores
5 divisores
6 divisores
7 divisores
8 divisores
9 divisores
10 divisores
11 divisores
12 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:16:04) 
-- CODE:
num=int(input("numero: "))
a=0
while(a < num):
	a=a+1
print(a,"divisores")
	

-- OUTPUT:
12 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:18:11) 
-- CODE:
num=int(input("numero: "))
a=0
while(a < num):
	a=a+1
	print(a,"1 divisor")
	print(a,"divisores")
	

-- OUTPUT:
1 1 divisor
1 divisores
2 1 divisor
2 divisores
3 1 divisor
3 divisores
4 1 divisor
4 divisores
5 1 divisor
5 divisores
6 1 divisor
6 divisores
7 1 divisor
7 divisores
8 1 divisor
8 divisores
9 1 divisor
9 divisores
10 1 divisor
10 divisores
11 1 divisor
11 divisores
12 1 divisor
12 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:18:52) 
-- CODE:
num=int(input("numero: "))
a=0
while(a < num):
	a=a+1
	print(a,"divisores")
	

-- OUTPUT:
1 divisores
2 divisores
3 divisores
4 divisores
5 divisores
6 divisores
7 divisores
8 divisores
9 divisores
10 divisores
11 divisores
12 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:19:44) 
-- CODE:
num=int(input("numero: "))
a=0
while(a <= num):
	a=a+1
	print(a,"divisores")
	

-- OUTPUT:
1 divisores
2 divisores
3 divisores
4 divisores
5 divisores
6 divisores
7 divisores
8 divisores
9 divisores
10 divisores
11 divisores
12 divisores
13 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:20:14) 
-- CODE:
num=int(input("numero: "))
a=0
while(a > num):
	a=a+1
	print(a,"divisores")
	

-- OUTPUT:
1 divisores
2 divisores
3 divisores
4 divisores
5 divisores
6 divisores
7 divisores
8 divisores
9 divisores
10 divisores
11 divisores
12 divisores
13 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:21:18) 
-- CODE:
num=int(input("numero: "))
a=0
while(a < num):
	print(a,"divisores")
	a=a+1
	

-- OUTPUT:
0 divisores
1 divisores
2 divisores
3 divisores
4 divisores
5 divisores
6 divisores
7 divisores
8 divisores
9 divisores
10 divisores
11 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:22:10) 
-- CODE:
num=int(input("numero: "))
a=0
while(a < num):
	a=a+1
print(a,"divisores")
	
	

-- OUTPUT:
12 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
